pilot/pkg/security/authz/builder/testdata/http/allow-path-in.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: httpbin-1
  namespace: foo
spec:
  selector:
    matchLabels:
      app: httpbin
      version: v1
  rules:
    - to:
        - operation:
            paths: [ "/exact", "/prefix/*", "*/suffix", "*", "/path/template/{*}", "/{**}/path/template" ]
            notPaths: [ "/not-exact", "/not-prefix/*", "*/not-suffix", "*", "/not-path/template/{*}", "/{**}/not-path/template" ]
